# kinect2

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/kinect2/: kinect2_calibration.hpp  kinect2_camera_parameters.hpp  kinect2_depth_to_color_map.hpp  kinect2_interface.h  kinect2_node.h  kinect2_projector.hpp  kinect2_raw_node.h
launch/: kinect2.launch  kinect2_raw.launch
msg/: Kinect2Info.msg
res/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
src/: kinect2_depth_to_color_map.hpp  kinect2_interface.cpp  kinect2_interface.h  kinect2_node.cpp  kinect2_node.h  kinect2_raw_node.cpp
