<?xml version="1.0"?>
<package>
  <name>kinect2</name>
  <version>0.0.0</version>
  <description>The kinect2 package</description>

  <maintainer email="hanten@todo.todo">hanten</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>

  <export>
  </export>
</package>
