<?xml version="1.0"?>
<package>
  <name>kinect2</name>
  <version>0.0.1</version>
  <description>
    The kinect2 package contains a simpliefied version of the kinect driver for ros.
    It requires fewer computation power and only provides all data in raw resolutions.
  </description>

  <maintainer email="richard.hanten@uni-tuebingen.de">hanten</maintainer>
  <author email="richard.hanten@uni-tuebingen.de">hanten</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>

  <export>
  </export>
</package>
