<?xml version="1.0"?>
<package>
  <name>kinect2</name>
  <version>0.0.2</version>
  <description>
    The kinect2 package contains a simple kinect2 driver for ros.
    This driver package uses only the device internal parameters to generate 
    colored depth clouds and to return rectified and registered data.
  </description>

  <maintainer email="richard.hanten@uni-tuebingen.de">hanten</maintainer>
  <author email="richard.hanten@uni-tuebingen.de">hanten</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>

  <export>
  </export>
</package>
